--- a/capstone_bib.bib
+++ b/capstone_bib.bib
@@ -188,3 +188,29 @@
   isbn =		{978-9-8815-6391-0},
   venue = {Chengdu, China}
 }
+
+@inproceedings{sensorfly,
+  author =       "Aveek Purohit and others",
+  title =        {{SensorFly: Controlled-mobile Sensing Platform for Indoor Emergency Response Applications}},
+  crossref =	{IPSN:2011}
+}
+
+@proceedings{IPSN:2011,
+  title =        "International Conference on Information Processing in Sensor Networks",
+  booktitle =     "International Conference on Information Processing in Sensor Networks",
+  publisher =    {IEEE},
+  year =         {2011}
+}
+
+@inproceedings{myeong,
+  author =       "W. Myeong and others",
+  title =        {{Development of a drone-type wall-sticking and climbing robot}},
+  crossref =	{URAI:2015}
+}
+
+@proceedings{URAI:2015,
+  title =        "International Conference on Ubiquitous Robots and Ambient Intelligence",
+  booktitle =     "International Conference on Ubiquitous Robots and Ambient Intelligence",
+  publisher =    {IEEE},
+  year =         {2015}
+}
