--- a/designdevelopment.tex
+++ b/designdevelopment.tex
@@ -1,5 +1,6 @@
 \documentclass[capstone_report.tex]{subfiles}
 \begin{document}
+\chapter{Design development}
 
 \section{Drone Selection}
 The most important technology decision to be made for URSA is which UAV platform should be used for our prototype. The purpose of this section is to compare existing drone platforms and evaluate their suitability for our project.\\
